--- a/public/addsongs/style.css
+++ b/public/addsongs/style.css
@@ -40,7 +40,7 @@ input[type="submit"]:hover {
     background-color: #595a5b; 
 }
 
-div {
+#estiloCancion {
     display: flex;
     justify-content: center;
     width: 30%;
